--- a/index.css
+++ b/index.css
@@ -90,9 +90,9 @@ h6 {
 .intro-wrapper {
   background-color: var(--secondaryColor);
   border: 1px solid var(--borderColor);
-  -webkit-box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.37);
-  box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.37);
-
+  -webkit-box-shadow: -1px 0px 11px 1px rgba(0, 0, 0, 0.23);
+  box-shadow: -1px 0px 11px 1px rgba(0, 0, 0, 0.23);
+  border-radius: 3px 3px 0 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 3em 30em;
@@ -103,7 +103,52 @@ h6 {
 
 .nav-wrapper {
   grid-area: nav-wrapper;
+  border-radius: 3px 3px 0 0;
+  border-bottom: 1px solid var(--borderColor);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primaryColor);
 }
+
+.navigation {
+  margin: 0;
+  padding: 10px;
+}
+
+.navigation li {
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.dots-wrapper {
+  display: flex;
+  padding: 10px;
+}
+
+#dot-one {
+  background-color: #fc6058;
+}
+
+#dot-two {
+  background-color: #fec02f;
+}
+
+#dot-three {
+  background-color: #2aca3e;
+}
+
+.browser-dot {
+  background-color: black;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 5px;
+  -webkit-box-shadow: -1px 0px 11px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: -1px 0px 11px 1px rgba(0, 0, 0, 0.1);
+}
+
 .left-column {
   grid-area: left-column;
 }
