--- a/index.css
+++ b/index.css
@@ -55,6 +55,8 @@ h3 {
 }
 h4 {
   font-size: 24px;
+  padding: 0px;
+  margin: 0px;
 }
 h5 {
   font-size: 20px;
@@ -76,7 +78,7 @@ h6 {
 }
 
 .main-cnt {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -95,7 +97,6 @@ h6 {
   border-radius: 3px 3px 0 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3em 30em;
   grid-template-areas:
     'nav-wrapper nav-wrapper'
     'left-column right-column';
@@ -151,13 +152,87 @@ h6 {
 
 .left-column {
   grid-area: left-column;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
+
+#profile-pic {
+  display: block;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border: 2px solid var(--borderColor);
+}
+
 .right-column {
   grid-area: right-column;
+  display: grid;
+  align-content: center;
+  margin-left: 10%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#preview {
+  width: 300px;
+  border: 1.5px solid #17a2b8;
+  background-color: var(--preview-gb);
+  padding: 15px;
+  position: relative;
+}
+
+#preview-heading {
+  padding: 0px;
+  margin: 0px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.corner {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  border: 1.5px solid #17a2b8;
+  background-color: #fff;
+  position: absolute;
+}
+
+#corner-top-left {
+  top: -5px;
+  left: -5px;
+}
+#corner-top-right {
+  top: -5px;
+  right: -5px;
+}
+
+#corner-bottom-left {
+  bottom: -5px;
+  left: -5px;
+}
+
+#corner-bottom-right {
+  bottom: -5px;
+  right: -5px;
 }
 
 @media screen and (max-width: 1200px) {
   .main-cnt {
     width: 95%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .intro-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'nav-wrapper'
+      'left-column'
+      'right-column';
+  }
+
+  .right-column {
+    justify-content: center;
+    margin-left: 0%;
   }
 }
