--- a/index.css
+++ b/index.css
@@ -153,8 +153,8 @@ h6 {
 
 .left-column {
   grid-area: left-column;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
+  padding-top: 80px;
 }
 
 #profile-pic {
@@ -171,8 +171,8 @@ h6 {
   display: grid;
   align-content: center;
   margin-left: 10%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
+  padding-top: 80px;
 }
 
 #preview {
@@ -218,8 +218,8 @@ h6 {
 .about-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding-bottom: 80px;
+  padding-top: 80px;
   gap: 150px;
 }
 
@@ -232,6 +232,32 @@ h6 {
   display: flex;
   justify-content: space-evenly;
   background-color: var(--previewShadow);
+}
+
+.post-wrapper {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 500px);
+  gap: 50px;
+  justify-content: center;
+}
+
+.post {
+  border: 1px solid var(--borderColor);
+  -webkit-box-shadow: 3px 3px 16px 1px rgba(0, 0, 0, 0.43);
+  box-shadow: 3px 3px 16px 1px rgba(0, 0, 0, 0.43);
+}
+
+.thumbnail {
+  display: block;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.post-preview {
+  background-color: #fff;
+  padding: 15px;
 }
 
 @media screen and (max-width: 1200px) {
