--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ textarea {
   font-weight: 300;
 }
 
+textarea {
+  resize: none;
+}
+
 a {
   text-decoration: none;
   color: #17a2b8;
@@ -47,12 +51,18 @@ ul {
 
 h1 {
   font-size: 56px;
+  padding: 0px;
+  margin: 0px;
 }
 h2 {
   font-size: 36px;
+  padding: 0px;
+  margin: 0px;
 }
 h3 {
   font-size: 28px;
+  padding: 0px;
+  margin: 0px;
 }
 h4 {
   font-size: 24px;
@@ -61,9 +71,22 @@ h4 {
 }
 h5 {
   font-size: 20px;
+  padding: 0px;
+  margin: 0px;
 }
 h6 {
   font-size: 16px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.heading {
+  font-size: 28px;
+  margin: 0;
+  padding: 25px 0 10px 0;
+  text-align: center;
+  font-weight: bold;
+  color: var(--primaryText);
 }
 
 .s1 {
@@ -235,7 +258,8 @@ h6 {
 }
 
 .post-wrapper {
-  margin-top: 70px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fit, 500px);
   gap: 50px;
@@ -258,6 +282,52 @@ h6 {
 .post-preview {
   background-color: #fff;
   padding: 15px;
+}
+
+#submit-btn {
+  margin-top: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  background-color: black;
+  border: none;
+}
+
+#contact-form {
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid var(--borderColor);
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--primaryColor);
+  margin-bottom: 50px;
+}
+
+#contact-form label {
+  line-height: 2.5em;
+  font-weight: bold;
+}
+
+#contact-form textarea {
+  min-height: 100px;
+  font-size: 14px;
+}
+
+.form-wrapper {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.input-field {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: var(--secondaryColor);
+  border-radius: 5px;
+  border: 1px solid var(--borderColor);
+  font-size: 14px;
 }
 
 @media screen and (max-width: 1200px) {
