--- a/index.css
+++ b/index.css
@@ -366,6 +366,7 @@ h6 {
 
 .input-field {
   width: 100%;
+  box-sizing: border-box;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: var(--secondaryColor);
@@ -392,5 +393,12 @@ h6 {
   .right-column {
     justify-content: center;
     margin-left: 0%;
+  }
+}
+
+
+@media screen and (max-width: 600px){
+  .post-wrapper {
+    grid-template-columns: repeat(auto-fit, 300px);
   }
 }
