--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ h6 {
 }
 
 .heading {
-  font-size: 28px;
+  font-size: 32px;
   margin: 0;
   padding: 25px 0 10px 0;
   text-align: center;
@@ -268,6 +268,11 @@ h6 {
   display: flex;
   justify-content: space-evenly;
   background-color: var(--previewShadow);
+  
+}
+
+#skills li {
+  font-weight: 700;
 }
 
 .post-wrapper {
